--- a/DrDiagnostic/manifest.json
+++ b/DrDiagnostic/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Getting Started Example",
-  "description": "Build an Extension!",
+  "name": "Dr Diagnostic",
+  "description": "Easy way to get the diagnostic responses.",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
